fix broken status badge

--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 Intellij plugin for TLA+
 ========================
 
-image:https://github.com/ocadaruma/tlaplus-intellij-plugin/workflows/CI/badge.svg?branch=master[link="https://github.com/ocadaruma/tlaplus-intellij-plugin/actions?query=workflow%3ACI+branch%3Amaster+event%3Apush"]
+image:https://github.com/ocadaruma/tlaplus-intellij-plugin/actions/workflows/ci.yml/badge.svg[link="https://github.com/ocadaruma/tlaplus-intellij-plugin/actions?query=workflow%3ACI+branch%3Amaster+event%3Apush"]
 image:https://img.shields.io/jetbrains/plugin/v/17965-tla-[link="https://plugins.jetbrains.com/plugin/17965-tla-"]
 
 Intellij plugin for https://lamport.azurewebsites.net/tla/tla.html[TLA+] formal specification language.
